# qUART

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
deploy/: retag.sh
deploy/flatpak/: deploy.sh  io.github.ilya_sotnikov.qUART.desktop  io.github.ilya_sotnikov.qUART.yml
deploy/linux/: deploy_all.sh
deploy/linux/appimage/: deploy.sh  qUART.desktop
deploy/linux/flatpak/: deploy.sh  io.github.ilya_sotnikov.qUART.yml
deploy/windows/: deploy.sh
icons/: icons.qrc
lib/: CMakeLists.txt
lib/qcustomplot/: CMakeLists.txt
src/: CMakeLists.txt  Chart.cpp  Chart.h  DataSettingsDialog.cpp  DataSettingsDialog.h  DataSettingsDialog.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  Plot.cpp  Plot.h  PortSettingsDialog.cpp  PortSettingsDialog.h  PortSettingsDialog.ui  PortsInfoDialog.cpp  PortsInfoDialog.h  SerialTransceiver.cpp  SerialTransceiver.h  TextWidget.cpp  TextWidget.h  chart.cpp  chart.h  chartdatacontainer.cpp  chartdatacontainer.h  chartdatacontainers.cpp  chartdatacontainers.h  customaction.cpp  customaction.h  customgraph.cpp  customgraph.h  customplot.cpp  customplot.h  datasettingsdialog.cpp  datasettingsdialog.h  main.cpp  mainwindow.cpp  mainwindow.h  portsettingsdialog.cpp  portsettingsdialog.h  portsinfodialog.cpp  (+7 more)
